--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,3 +1,13 @@
+.glassEffect {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .spriteRightFaced {
   animation-name: moveRight;
 }
@@ -52,4 +62,37 @@
     transform: scaleX(-1);
   }
 
+}
+
+.fadeFirst {
+  animation: fadeFirst 5s linear infinite;
+}
+
+@keyframes fadeFirst {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeSecond {
+  animation: fadeSecond 5s linear infinite;
+  animation-delay: 2s;
+}
+
+@keyframes fadeSecond {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0
+  }
 }
